Added peach cobbler recipe.

--- a/recipes/peach-cobbler.html
+++ b/recipes/peach-cobbler.html
@@ -2,31 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Fried Chicken</title>
+        <title>Easy Peach Cobbler</title>
     </head>
-    <h1>Fried Chicken</h1>
-    <img src="../images/fried-chicken.jpg" alt="fried chicken" height="350" width="350">
+    <h1>Peach Cobbler</h1>
+    <img src="../images/peach-cobbler.jpg" alt="peach cobbler" height="350" width="350">
     <h2>Description</h2>
-    <p>This recipe is a southern staple. Fried chicken is simple and delicious.
+    <p>A wonderful summer recipce. Peach cobbler with ice cream is a summer staple.
     </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>4lbs of chicken</li>
-        <li>1 cup buttermilk</li>
-        <li>2 cups all-purpose flour</li>
-        <li>1 teaspoon paprika</li>
-        <li>Salt and pepper to taste</li>
-        <li>2 quarts vegetable oil</li>
+        <li>1 cup white sugar</li>
+        <li>1/2 cup butter, room temp</li>
+        <li>1 cup self-rising flour</li>
+        <li>1 cup milk</li>
+        <li>1 can sliced peaches, with juice</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Place flour in large plastic bag. Season the flour with paprika, salt, and pepper.</li>
-        <li>Dip chicken pieces in buttermilk, then a few at a time, put them in the bag with flour, seal the bag
-            and shake to coat well.
-        </li>
-        <li>Place the chicken on tray and let it sit until the flour is a paste like consistency.</li>
-        <li>Fill a cast iron skillet with oil.</li>
-        <li>Fry the chicken until it reaches an internal temperature of 165 degrees farenheit.</li>
-        <li>Let chicken rest on paper towels to darin oil.</li>
+        <li>Preheat oven to 350 degrees F.</li>
+        <li>Beat sugar and butter together in a 1-quart baking dish. Mix in flour and milk until smooth. Pour peaches and juice over top.</li>
+        <li>Bake in the preheated oven until golden brown, 25 to 30 minutes.</li>
+
     </ol>
 </html>
